# VkScanlinePR

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  VkScanlinePR.sln
VkScanlinePR/: VkScanlinePR.vcxproj  VkScanlinePR.vcxproj.filters
VkScanlinePR/src/: main.cpp
VkScanlinePR/src/app/: vg_app.cpp  vg_app.h
VkScanlinePR/src/core/: rasterizer.h  rasterizer_scanline.cpp
VkScanlinePR/src/core/common/: camera.hpp  compute_kernal.h
VkScanlinePR/src/core/scanline/: compute_ubo.h  scanline_rasterizer.cpp  scanline_rasterizer.h  vk_vg_data.h
VkScanlinePR/src/core/vg/: rvg.cpp  rvg.h  vg_container.cpp  vg_container.h
VkScanlinePR/src/core/vk/: vk_buffer.cpp  vk_buffer.h  vk_debug.cpp  vk_debug.h  vk_device.cpp  vk_device.h  vk_initializer.h  vk_swapchain.cpp  vk_util.cpp  vk_util.h  vk_vg_rasterizer.cpp  vk_vg_rasterizer.h
VkScanlinePR/src/core/vulkan/: vk_vg_rasterizer.cpp  vk_vg_rasterizer.h  vulkan_buffer.h
script/: build.sh  test.sh
src/: CMakeLists.txt  main.cpp
src/app/: vg_app.cpp  vg_app.h
src/core/: rasterizer.h
src/core/scanline/: scanline_rasterizer.cpp  scanline_rasterizer.h
src/core/vg/: rvg.cpp  vg_container.h
src/core/vk/: vk_buffer.cpp  vk_buffer.h  vk_device.cpp  vk_swapchain.h
src/core/vulkan/: vk_vg_rasterizer.h
workdir/: kv.txt  kv_out.txt  test_data.csv  test_data3.csv
workdir/input/rvg/: car.rvg  chord-black.rvg  chord.rvg  drops.rvg  embrace.rvg  reschart.rvg  test.rvg  tiger.rvg
workdir/shaders/: compute_shader_compile.py  frag.spv  scanlinepr.frag.spv  scanlinepr.vert  scanlinepr.vert.spv  shader.frag  shader.vert  vert.spv
workdir/shaders/common/: naive_scan.comp  naive_seg_sort_pairs.comp
workdir/shaders/common/spv/: naive_scan.comp.spv  naive_seg_sort_pairs.comp.spv
workdir/shaders/compute/: gen_merged_fragment_and_span.comp  makeIntersection0.comp  makeIntersection0.comp.spv  makeIntersection1.comp  make_intersection_0.comp  make_intersection_1.comp  transformPos.comp  transformPos.comp.spv  transform_pos.comp
workdir/shaders/compute/spv/: gen_merged_fragment_and_span.comp.spv  makeIntersection0.comp.spv  makeIntersection1.comp.spv  make_intersection_0.comp.spv  make_intersection_1.comp.spv  shuffle_fragment.comp.spv  transformPos.comp.spv
workdir/shaders/scanline/compute/: gen_fragment.comp  gen_merged_fragment_and_span.comp  make_intersection_0.comp  make_intersection_1.comp  mark_merged_fragment_and_span.comp  shuffle_fragment.comp  transform_pos.comp
workdir/shaders/scanline/compute/spv/: gen_fragment.comp.spv  gen_merged_fragment_and_span.comp.spv  make_intersection_0.comp.spv  make_intersection_1.comp.spv  mark_merged_fragment_and_span.comp.spv  transform_pos.comp.spv
workdir/shaders/scanline/surface/: scanlinepr.frag  scanlinepr.vert
workdir/shaders/scanline/surface/spv/: scanlinepr.vert.spv
